WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

TODO: investigate -pe tabbed -g 80x25 being 23 not 24 or 25 lines
TODO: zero scorllback buffer should free memory
TODO: kuake
TODO: look into the selection hilight patch
TODO: implement smartcase-like search in searchable-scrollback
TODO: digital clock gets nuked after searching
TODO: investigate the color-management patch send ages ago, as well as other postings
	- INCOMPATIBLE CHANGE: this version will always read ~/.Xdefaults, earlier
          versions only read it if display-resources (usually from .Xresources)
          are not set. This avoids the #1 FAQ ("why isn't my resource used") and
          seems to be logical behaviour, too. .Xdefaults resources have a lower
          priority than display-specific resources.
        - use less "correct" color scaling that is compatible with libX11 and Xft
          (avoids off-by-one colors resulting in striped backgrounds).
        - the "depth" resource is now respected.
	- add FORCE_UNBUFFERED_XFT define to features.h.
        - double-buffered xft drawing did suffer from pixel offset issues
          when pixmap transparency was enabled.
	- moved on_osc_seq to on_osc_seq_perl and added a more
          generic osc_seq.
        - fix a bug causing double callback invocations when perl hooks
          were invoked recursively.
        - the automove-background extension now properly works when the
          pixmap gets reset with an osc sequence (sqweek).
        - selection-pastebin did not work properly with non-latin1-characters.
        - apply colorUL only when the text colour is the default fg
          (patch by Wu Fengguang).
        - removed rxvtlib.h from the tarball, it had no reason to be there
          (spotted by Decklin Foster).
        - fix compiling with TRANSPARENT but !XPM_BACKGROUND, as reported 
          by omatunto_.